<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.LotteryActivity"
    tools:showIn="@layout/activity_lottery">

    <LinearLayout
        android:id="@+id/lotteryContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/nextIssueNoContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#021f36"
            android:gravity="center"
            android:orientation="vertical" />

        <github.chenupt.dragtoplayout.DragTopLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/dragTop"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@mipmap/lottery_bg_smaller">

            <!--top view-->
            <LinearLayout
                android:id="@+id/lotteryHistoryContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" />

            <LinearLayout
                android:id="@+id/drag_content_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/daletou_pull_ll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/daletou_pull_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:padding="2.0dip"
                        android:scaleType="centerInside"
                        android:src="@mipmap/icon_arrow_down" />
                </LinearLayout>

                <ScrollView
                    android:id="@+id/scroll_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/layoutOptionContainer"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical" />

                        <LinearLayout
                            android:id="@+id/layoutContainer"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical" />
                    </LinearLayout>
                </ScrollView>
            </LinearLayout>
        </github.chenupt.dragtoplayout.DragTopLayout>

        <LinearLayout
            android:id="@+id/ll_bottom"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="#cdd4dc"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:gravity="center"
                    android:text="已选 "
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvTotalNums"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/blue"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" 注"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="8dp"
                    android:text="共 "
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvTotalAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="0.0000"
                    android:textColor="@color/blue"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="元" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_clearAll"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/lottery_clear_all" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="清空"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_ll_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="2dp">

                <TextView
                    android:id="@+id/config_hidden"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true" />

                <LinearLayout
                    android:id="@+id/rebate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="返奌"
                        android:textSize="12sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#f4f4f4">

                        <Spinner
                            android:id="@+id/rebateSelectList"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="2dp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="单注"
                        android:textSize="12sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#f4f4f4">

                        <EditText
                            android:id="@+id/txtPrice"
                            style="@style/Lottery_EditText_Style"
                            android:layout_width="40dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:inputType="numberDecimal"
                            android:text="1.00" />

                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="元" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_ok"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:background="@mipmap/lottery_settle_disabled"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="去投注"
                    android:textColor="#ffffff" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/lottery_btn_settle" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>

