...
                    android:layout_marginLeft="4dp"
                    android:text="@string/quick_entrance"
                    android:textAppearance="@style/Middel_Title_Style" />
            </LinearLayout>

            <com.hec.app.framework.widget.MyGridView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/gridviewFavorite"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:columnWidth="90dp"
                android:horizontalSpacing="1.0px"
...
